@@ -17,7 +17,7 @@ REQUIREMENTS
    - mbstring, fileinfo, mcrypt (optional)
 * PEAR packages distributed with Roundcube or external:
    - MDB2 2.5.0 or newer
-   - Mail_Mime 1.7.0 or newer
+   - Mail_Mime 1.8.1 or newer
    - Net_SMTP 1.4.2 or newer
    - Auth_SASL 1.0.3 or newer
 * php.ini options (see .htaccess file):
